Added EarlyStopping to overcome overfitting problem

--- a/app/model_train_test.ipynb
+++ b/app/model_train_test.ipynb
@@ -140,6 +140,7 @@
     "        .with_file_paths('../data/fashion-mnist_train.csv',\n",
     "                        '../data/fashion-mnist_test.csv') \\\n",
     "        .with_image_size(28, 28) \\\n",
+    "        .with_callback_params('val_loss', 'min', 10) \\\n",
     "        .with_train_params(batch_size=2000,\n",
     "                           epochs=100,\n",
     "                           labels_dict=labels_dict,\n",
@@ -228,13 +229,7 @@
       "48000/48000 [==============================] - 31s 654us/step - loss: 0.2678 - acc: 0.9006 - precision_m: 0.9173 - recall_m: 0.8848 - f1_m: 0.9007 - val_loss: 0.2602 - val_acc: 0.9034 - val_precision_m: 0.9144 - val_recall_m: 0.8942 - val_f1_m: 0.9042\n",
       "Epoch 28/100\n",
       "48000/48000 [==============================] - 30s 625us/step - loss: 0.2676 - acc: 0.8995 - precision_m: 0.9160 - recall_m: 0.8854 - f1_m: 0.9004 - val_loss: 0.2583 - val_acc: 0.9014 - val_precision_m: 0.9170 - val_recall_m: 0.8924 - val_f1_m: 0.9046\n",
-      "Epoch 29/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 29/100\n",
       "48000/48000 [==============================] - 30s 619us/step - loss: 0.2606 - acc: 0.9028 - precision_m: 0.9190 - recall_m: 0.8881 - f1_m: 0.9033 - val_loss: 0.2514 - val_acc: 0.9041 - val_precision_m: 0.9169 - val_recall_m: 0.8937 - val_f1_m: 0.9051\n",
       "Epoch 30/100\n",
       "48000/48000 [==============================] - 30s 627us/step - loss: 0.2595 - acc: 0.9024 - precision_m: 0.9173 - recall_m: 0.8879 - f1_m: 0.9023 - val_loss: 0.2505 - val_acc: 0.9052 - val_precision_m: 0.9183 - val_recall_m: 0.8939 - val_f1_m: 0.9059\n",
